--- a/pkg/debian/changelog
+++ b/pkg/debian/changelog
@@ -1,3 +1,9 @@
+nektar++ (5.0.3-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Chris Cantwell <c.cantwell@imperial.ac.uk>  Mon, 23 Aug 2021 06:18:54 +0100
+
 nektar++ (5.0.2-1) unstable; urgency=medium
 
   * New upstream release. 
