Feature update userguide and developer guide of CFS

--- a/docs/developer-guide/developers-guide.bib
+++ b/docs/developer-guide/developers-guide.bib
@@ -634,3 +634,32 @@ year = "2011"
   note = "[Accessed 21 March 2018]"
 }
 
+@article{knoll_jacobian_free_2004,
+	title        = {Jacobian-free {N}ewton-{K}rylov methods: {A} survey of approaches and applications},
+	shorttitle   = {Jacobian-free {N}ewton-{K}rylov methods},
+	author       = {Knoll, D. A. and Keyes, D. E.},
+	year         = 2004,
+	month        = jan,
+	journal      = {Journal of Computational Physics},
+	volume       = 193,
+	number       = 2,
+	pages        = {357--397},
+	doi          = {10.1016/j.jcp.2003.08.010},
+	issn         = {0021-9991},
+	url          = {http://www.sciencedirect.com/science/article/pii/S0021999103004340},
+	urldate      = {2019-01-05},
+	abstract     = {Jacobian-free {N}ewton-{K}rylov (JFNK) methods are synergistic combinations of {N}ewton-type methods for superlinearly convergent solution of nonlinear equations and {K}rylov subspace methods for solving the {N}ewton correction equations. The link between the two methods is the Jacobian-vector product, which may be probed approximately without forming and storing the elements of the true Jacobian, through a variety of means. Various approximations to the Jacobian matrix may still be required for preconditioning the resulting {K}rylov iteration. As with {K}rylov methods for linear problems, successful application of the JFNK method to any given problem is dependent on adequate preconditioning. JFNK has potential for application throughout problems governed by nonlinear partial differential equations and integro-differential equations. In this survey paper, we place JFNK in context with other nonlinear solution algorithms for both boundary value problems (BVPs) and initial value problems (IVPs). We provide an overview of the mechanics of JFNK and attempt to illustrate the wide variety of preconditioning options available. It is emphasized that JFNK can be wrapped (as an accelerator) around another nonlinear fixed point method (interpreted as a preconditioning process, potentially with significant code reuse). The aim of this paper is not to trace fully the evolution of JFNK, nor to provide proofs of accuracy or optimal convergence for all of the constituent methods, but rather to present the reader with a perspective on how JFNK may be applicable to applications of interest and to provide sources of further practical information.},
+	file         = {ScienceDirect Full Text PDF:/media/zy3416/DATADRIVE1/documents/Zotero/storage/KZUR9KR6/Knoll and Keyes - 2004 - Jacobian-free {N}ewton-{K}rylov methods a survey of a.pdf:application/pdf;ScienceDirect Snapshot:/media/zy3416/DATADRIVE1/documents/Zotero/storage/4HUR5A2J/S0021999103004340.html:text/html}
+}
+
+@article{saad_gmres:_1986,
+	title        = {{GMRES}: {A} Generalized Minimal Residual Algorithm for Solving Nonsymmetric Linear Systems},
+	shorttitle   = {{GMRES}: {A} {Generalized} {Minimal} {Residual} {Algorithm} for Solving {Nonsymmetric} {Linear} Systems},
+	author       = {Saad, Youcef and Schultz, Martin H.},
+	year         = 1986,
+	journal      = {SIAM Journal on Scientific and Statistical Computing},
+	volume       = 7,
+	number       = 3,
+	pages        = {856--869},
+	file         = {GMRES_A GENERALIZED MINIMAL RESIDUAL ALGORITHM FOR SOLVING NONSYMMETRIC LINEAR SYSTEMS:/media/zy3416/DATADRIVE1/documents/Zotero/storage/C6VXNKTD/GMRES_A GENERALIZED MINIMAL RESIDUAL ALGORITHM FOR SOLVING NONSYMMETRIC LINEAR SYSTEMS.pdf:application/pdf}
+}
