--- a/docs/developer-guide/developers-guide.tex
+++ b/docs/developer-guide/developers-guide.tex
@@ -3,6 +3,7 @@
 \DeclareOldFontCommand{\bf}{\normalfont\bfseries}{\mathbf}
 
 \usepackage{makeidx}
+\usepackage{multirow}
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
