--- a/docs/developer-guide/shared/devguide-preamble.tex
+++ b/docs/developer-guide/shared/devguide-preamble.tex
@@ -23,6 +23,7 @@ openany, % A chapter may start on either a recto or verso page.
 \usepackage[final]{microtype} % Less badboxes
 \usepackage[stable]{footmisc} % Footnotes in section titles
 \usepackage{url}
+\usepackage{mathrsfs}
 
 % \usepackage{kpfonts} %Font
 
